# ckanext-oai-pmh-harvester

./: README.md  dev-requirements.txt  pyproject.toml  setup.cfg  setup.py  test.ini
.github/workflows/: ci.yml
ckanext/oai_pmh_harvester/: plugin.py
