[project]
name = "ckanext-oai-pmh-harvester"
version = "0.0.1"
description = "OAI PMH harvester for CKAN"
readme = "README.md"
authors = [{ name = "Gabriel Majeri" }]
license = { text = "AGPL" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.12",
]

keywords = ["CKAN", "OAI", "OAI-PMH"]
dependencies = [
    "pika",
    "ckanext-harvest @ git+https://github.com/ckan/ckanext-harvest.git#egg=ckanext-harvest[requirements]",
    "Sickle",
    "html-to-markdown",
]

[project.urls]
Homepage = "https://github.com/UniBuc-DTD/ckanext-oai-pmh-harvester"

[project.entry-points."ckan.plugins"]
oai_pmh_harvester = "ckanext.oai_pmh_harvester.plugin:OAIPMHHarvesterPlugin"

[project.optional-dependencies]
dev = ["pytest-ckan"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::sqlalchemy.exc.SADeprecationWarning",
    "ignore::sqlalchemy.exc.SAWarning",
    "ignore::DeprecationWarning",
]
addopts = "--ckan-ini test.ini"
